--- a/myproject/app/templates/base.html
+++ b/myproject/app/templates/base.html
@@ -10,16 +10,23 @@
     {% comment %} Boostrap {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="{% static '/static/css/style.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'CSS/style.css' %}" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+    <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 
 <body>
+    {% include 'navbartest.html' %}
     <div class="container">
-        {% block content %}{% endblock content %}</div>
+        {% block content %}
+
+        {% endblock content %}
+    </div>
 </body>
 
 </html>
