--- a/myproject/app/templates/test.html
+++ b/myproject/app/templates/test.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Hello</h1>
-{% endblock content %}
+{% include 'card3Col.html' %}
+{% endblock  %}
