--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -1,7 +1,20 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<style>
+    .navbar-YENYEN{
+        background-color: #494D5F;
+    }
+    .navbar-brand{
+        font-size: 34px;
+    }
+    .navbar-text{
+        
+    }
+</style>
+
+<nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">YENYEN</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <b class="navbar-text">Status</b>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
