--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -7,9 +7,7 @@
     .navbar-brand{
         font-size: 34px;
     }
-    .navbar-text{
-        
-    }
+
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN">
@@ -21,8 +19,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <b class="navbar-text">Status</b>
+                <li class="nav-item align-middle">
+                    Status
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
