--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -1,13 +1,13 @@
 {% load static %}
 
 <style>
-    .navbar-YENYEN{
+    .navbar-YENYEN {
         background-color: #494D5F;
     }
-    .navbar-brand{
+
+    .navbar-brand {
         font-size: 34px;
     }
-
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN">
@@ -17,11 +17,12 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <span class="navbar-text">
+            Navbar text with an inline element
+        </span>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item align-middle">
-                    Status
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
