--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -11,33 +11,37 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN">
-    <div class="container">
-        <a class="navbar-brand" href="#">YENYEN</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-                </li>
-              </ul>
-        <div class="nav-item">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <class class="card-subtitle mb-2 text-muted">Card subtitle</class>
+        <div class="navbar-inner container-fluid">
+            <div class ="d-flex justify-content-start d-flex align-items-center">
+                <a class="navbar-brand" href="#">YENYEN</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Restaurant
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Italian cuisine</a></li>
+                            <li><a class="dropdown-item" href="#">Thai cuisine</a></li>
+                            <li><a class="dropdown-item" href="#">Chinese cuisine</a></li>
+                        </ul>
+                        </li>
+                    </ul>
+            </div>
+            <div class="nav-item">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">Queue Number : -</h5>
+                    <class class="card-subtitle mb-2 text-muted">Status : No queue</class>
+                    </div>
                 </div>
             </div>
+            <div>
+                <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4">Sign up</button>
+                <button type="button" class="btn btn-outline-success btn-lg">Login</button>
+            </div>
         </div>
-        <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4">Sign up</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Login</button>
-    </div>
 </nav>
