--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -41,7 +41,9 @@
             </div>
             <div>
                 <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4">Sign up</button>
-                <button type="button" class="btn btn-outline-success btn-lg">Login</button>
+                <a href =  "{% url 'login' %}">
+                    <button type="button" class="btn btn-outline-success btn-lg">Login</button>
+                </a>
             </div>
         </div>
 </nav>
