--- a/myproject/app/templates/resCard.html
+++ b/myproject/app/templates/resCard.html
@@ -45,6 +45,5 @@
             </div>
         </div>
     </div>
+    {% include 'map.html' %}
     {% endblock content %}
-    {% comment %}
-</div> {% endcomment %}
