--- a/myproject/app/templates/navbartest.html
+++ b/myproject/app/templates/navbartest.html
@@ -40,8 +40,12 @@
                 </div>
             </div>
             <div>
-                <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4; margin: 0px 15px">Sign up</button>
-                <button type="button" class="btn btn-outline-success btn-lg" style="margin: 0px 15px">Login</button>
+                <a href= "{%url 'signup'%}">
+                    <button type="button" class="btn btn-primary btn-lg" style="background-color:#D0BDF4; margin: 0px 15px">Sign up</button>
+                </a>
+                <a href= "{%url 'login'%}">
+                    <button type="button" class="btn btn-outline-success btn-lg" style="margin: 0px 15px">Login</button>
+                </a>
             </div>
         </div>
 </nav>
