--- a/myproject/app/templates/login.html
+++ b/myproject/app/templates/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
         <meta charset = "utf-8">
         <title>YEN YEN Login</title>
-        <link rel = "stylesheet" href = "static/CSS/login.css">
+        <link rel = "stylesheet" href = "{% static 'CSS/login.css' %}">
     </head>
     <body>
         <div class = "center">
