--- a/myproject/app/templates/resCard.html
+++ b/myproject/app/templates/resCard.html
@@ -36,7 +36,8 @@
                                 <span class="card-text">8 Mins.</span>
                             </p>
                             <p class="card-text">
-                                <button type="button" class="btn btn-primary btn-sm"> รายการอาหาร</button>
+                                <button type="button" class="btn btn-primary btn-sm">
+                                    รายการอาหาร</button>
                                 <button type="button" class="btn btn-secondary btn-sm">จองคิว</button>
                             </p>
                         </div>
