--- a/myproject/app/templates/card3Col.html
+++ b/myproject/app/templates/card3Col.html
@@ -1,24 +1,21 @@
-{% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="row row-cols-4 row-cols-md-3">
-    <div class="col">
-        <div class="card p-2 border-0">
-            <img src="{% static 'images/foodEx.jpg' %}" class="card-img resImg" alt="...">
-            <div class="card-body">
-                <h2 class="card-title">KFC</h2>
-                <p class="card-text">Fast Food, Fried Chicken</p>
-                <p class="card-text">
-                    <i class="fas fa-star text-warning"></i>
-                    <span> 4.2</span>
-                    <i class="far fa-clock text-secondary"></i>
-                    <span> 15 min</span>
-                    <i class="fas fa-map-marker-alt text-secondary"></i>
-                    <span> 2 km</span>
-                </p>
-            </div>
+
+<div class="col">
+    <div class="card p-2 border-0">
+        <img src="{% static 'images/foodEx.jpg' %}" class="card-img resImg" alt="...">
+        <div class="card-body">
+            <h2 class="card-title">{{restaurant.resTitle}}</h2>
+            <p class="card-text">{{restaurant.resDesc}}</p>
+            <p class="card-text">
+                <i class="fas fa-star text-warning"></i>
+                <span> 4.2</span>
+                <i class="far fa-clock text-secondary"></i>
+                <span> 15 min</span>
+                <i class="fas fa-map-marker-alt text-secondary"></i>
+                <span> 2 km</span>
+            </p>
         </div>
     </div>
-
 </div>
 {% endblock content %}
