--- a/myproject/app/templates/index.html
+++ b/myproject/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row row-cols-4 row-cols-md-6">
-    {% for title in titles %}
-    {% include 'categoryCard.html' with title=title%}
+    {% for categoryTitle in categoryTitles %}
+    {% include 'categoryCard.html' with categoryTitle=categoryTitle%}
     {% endfor %}
 </div>
-{% include 'resCard.html' %}
-
+<div class="row row-cols-4 row-cols-md-3">
+    {% include 'Card3Col.html' with restaurant=restaurant %}
+</div>
 {% endblock content %}
