--- a/myproject/app/templates/resCard.html
+++ b/myproject/app/templates/resCard.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block content %} {% comment %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% block content %} {% comment %}
 <div class="row justify-content-center">
   {% endcomment %}
   <div class="row justify-content-center">
@@ -49,24 +51,6 @@
       </div>
     </div>
   </div>
-  <!-- Modal -->
-  <!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-            ...
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Understood</button>
-            </div>
-        </div>
-        </div>
-    </div> -->
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -82,26 +66,7 @@
               <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
               <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
             </div>
-            <!-- <div class="row">
-                        <div class="col-6">
-                            <div class="card-body">
-                                <h2 class="card-title">ร้านเจ๊โอว</h2>
-                                <p class="card-text">ซีฟู๊ด, อาหารตามสั่ง</p>
-                                <p class="card-text">เวลาที่จอง</p>
-                                <p class="card-text">จำนวนผู้เข้าใช้</p>
-                            </div>
-                        </div>
-                        <div class="col-6 align-self-end">
-                            <div class="text-end card-body ">
-                                <p class="card-text">
-                                    
-                                </p>
-                                <p class="card-text">
-                                    <input type="number">
-                                </p>
-                            </div>
-                        </div>
-                    </div> -->
+ 
             <div class="card-body">
               <h2 class="card-title">ร้านอาหาร : ร้านเจ๊โอว</h2>
               <p class="card-text">ประเภท : ซีฟู๊ด, อาหารตามสั่ง</p>
@@ -132,6 +97,7 @@
     </div>
   </div>
 
-
-  {% include 'map.html' %} {% endblock content %}
+  {% include 'modal.html' %}
+  {% include 'map.html' %} 
+  {% endblock content %}
 </div>
