--- a/myproject/app/templates/profile.html
+++ b/myproject/app/templates/profile.html
@@ -2,10 +2,15 @@
 {% load static %}
 {% block content %}
 <div class="row">
-    <div class="col-6">
-        Column1
+    <div class="col-md-4">
+        <img src = "{% static 'images/profile.png' %}" class="imgBg" alt="Responsive image" >
     </div>
+    <div class="col-md-6">
 
+    </div>
+    <div class="col-md-2">
+
+    </div>
 
 </div>
 {% endblock content %}
