--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -10,7 +10,7 @@
     {% comment %} Boostrap {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="{% static 'CSS/style.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    {% include 'navbartest.html' %}
+    {% include 'app/navbar.html' %}
     <div class="container">
         {% block content %}
 
