--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'app/base.html' %} 
 {% load static %} 
 {% block content %} {% comment %}
 <div class="row justify-content-center">
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  {% include 'modal.html' %}
-  {% include 'map.html' %} 
+  {% include 'app/modal.html' %}
+  {% include 'app/map.html' %} 
   {% endblock content %}
 </div>
