edit image name & foodList adjusting+button

--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -1,15 +1,16 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block content %}
-<div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-left m-3">
+<div class="row  g-4 d-flex justify-content-left m-3">
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" style="height:50%;">
       <div class="card-body">
         <h5 class="card-title">Burger</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -22,13 +23,14 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Lasagna</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -41,13 +43,15 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/spaghetti-bolognese-36d090.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;"
+        alt="...">
       <div class="card-body">
-        <h5 class="card-title">Spaghetti Bolongnese</h5>
+        <h5 class="card-title">Spaghetti Bolognese</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -60,13 +64,15 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/spaghetticarbonara-1200x675.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;"
+        alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Carbonara</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -79,13 +85,14 @@
     </div>
   </div>
 
-    <div class="col" style = "width: 15rem">
-      <div class="card h-100">
-       <img src="{% static 'images/SquidInkPasta.jpg' %}" class="card-img-top" alt="...">
-       <div class="card-body">
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="{% static 'images/SquidInkPasta.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
+      <div class="card-body">
         <h5 class="card-title">Squid Ink pasta seafood</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -95,21 +102,16 @@
           </ul>
         </div>
       </div>
-     </div>
     </div>
-</div>
-
-
-
-<div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-left m-3">
-
-  <div class="col" style = "width: 15rem">
+  </div>
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/Burger.jpg' %}" class="card-img-top" style="height:50%;">
       <div class="card-body">
         <h5 class="card-title">Burger</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -122,13 +124,14 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/Lasagna.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Lasagna</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -141,13 +144,15 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/spaghetti-bolognese-36d090.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;"
+        alt="...">
       <div class="card-body">
-        <h5 class="card-title">Spaghetti Bolongnese</h5>
+        <h5 class="card-title">Spaghetti Bolognese</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -160,13 +165,15 @@
     </div>
   </div>
 
-  <div class="col" style = "width: 15rem">
+  <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/spaghetticarbonara-1200x675.jpg' %}" class="card-img-top" alt="...">
+      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;"
+        alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Carbonara</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -179,13 +186,14 @@
     </div>
   </div>
 
-    <div class="col" style = "width: 15rem">
-      <div class="card h-100">
-       <img src="{% static 'images/SquidInkPasta.jpg' %}" class="card-img-top" alt="...">
-       <div class="card-body">
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="{% static 'images/SquidInkPasta.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
+      <div class="card-body">
         <h5 class="card-title">Squid Ink pasta seafood</h5>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Food Status
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -195,8 +203,13 @@
           </ul>
         </div>
       </div>
-     </div>
     </div>
+  </div>
 </div>
-
+<div class="row  g-4 d-flex justify-content-end m-3">
+<div class = "col-3">
+  <button type="button" class="btn btn-warning btn-lg me-3">Edit</button>
+  <button type="button" class="btn btn-primary btn-lg">Submit</button>
+  </div>
+</div>
 {% endblock content %}
