--- a/myproject/templates/app/foodList.html
+++ b/myproject/templates/app/foodList.html
@@ -45,8 +45,7 @@
 
   <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;"
-        alt="...">
+      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Bolognese</h5>
         <div class="dropdown">
@@ -66,8 +65,7 @@
 
   <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;"
-        alt="...">
+      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Carbonara</h5>
         <div class="dropdown">
@@ -146,8 +144,7 @@
 
   <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;"
-        alt="...">
+      <img src="{% static 'images/bolognese.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Bolognese</h5>
         <div class="dropdown">
@@ -167,8 +164,7 @@
 
   <div class="col-3">
     <div class="card h-100">
-      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;"
-        alt="...">
+      <img src="{% static 'images/carbonara.jpg' %}" class="card-img-top" style="height:50%;" alt="...">
       <div class="card-body">
         <h5 class="card-title">Spaghetti Carbonara</h5>
         <div class="dropdown">
@@ -207,9 +203,12 @@
   </div>
 </div>
 <div class="row  g-4 d-flex justify-content-end m-3">
-<div class = "col-3">
-  <button type="button" class="btn btn-warning btn-lg me-3">Edit</button>
-  <button type="button" class="btn btn-primary btn-lg">Submit</button>
+  <div class="col-3">
+    <button type="button" class="btn btn-warning btn-lg me-3" data-bs-toggle="modal" data-bs-target="#foodListmodal">
+      Edit
+    </button>
+    <button type="button" class="btn btn-primary btn-lg">Submit</button>
   </div>
 </div>
+{% include 'app/foodListmodal.html' %}
 {% endblock content %}
